force-app/main/default/objects/Contact/fields/ec_party_affiliation__c.field-meta.xml
<CustomField>
    <fullName>ec_party_affiliation__c</fullName>
    <label>Afiliación Partidaria</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MOVIMIENTO ALIANZA PAIS, PATRIA  ALTIVA I SOBERANA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>