force-app/main/default/objects/Contact/fields/ec_tribu__c.field-meta.xml
<CustomField>
    <fullName>ec_tribu__c</fullName>
    <label>Tribu Ecuador</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ANTAGONISTAS</fullName>
            </value>
            <value>
                <fullName>CORREISTAS</fullName>
            </value>
            <value>
                <fullName>INDIVIDUALISTAS</fullName>
            </value>
            <value>
                <fullName>MATERIALISTAS</fullName>
            </value>
            <value>
                <fullName>NEOLIBERALES</fullName>
            </value>
            <value>
                <fullName>POPULISTAS</fullName>
            </value>
            <value>
                <fullName>PRAGMATICOS</fullName>
            </value>
            <value>
                <fullName>PROGRESISTAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>