force-app/main/default/objects/Contact/fields/ec_updated__c.field-meta.xml
<CustomField>
    <fullName>ec_updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Actualizado Ecuador (No Borrar)</label>
    <type>Checkbox</type>
</CustomField>