force-app/main/default/objects/Contact/fields/Edad__c.field-meta.xml
<CustomField>
    <fullName>Edad__c</fullName>
    <description>Campo calculado via batch semanalmente</description>
    <label>Edad</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>