force-app/main/default/objects/Contact/fields/election_rolls__c.field-meta.xml
<CustomField>
    <fullName>election_rolls__c</fullName>
    <label>Inscripto en padrones</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CORDOBA</fullName>
            </value>
            <value>
                <fullName>SANTA FE</fullName>
            </value>
            <value>
                <fullName>ANAGRAFE ITALIA</fullName>
            </value>
            <value>
                <fullName>NACIONAL 2023 PROVISORIO</fullName>
            </value>
            <value>
                <fullName>EXTRANJEROS CABA 23</fullName>
            </value>
            <value>
                <fullName>EXTRANJEROS PBA 23</fullName>
            </value>
            <value>
                <fullName>EXTRANJEROS PBA 21</fullName>
            </value>
            <value>
                <fullName>NACIONAL 2023</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>