force-app/main/default/objects/Contact/fields/Electoral_Circuit__c.field-meta.xml
<CustomField>
    <fullName>Electoral_Circuit__c</fullName>
    <label>Circuito Electoral</label>
    <length>255</length>
    <type>Text</type>
</CustomField>