force-app/main/default/objects/Contact/fields/Electoral_Circuit_name__c.field-meta.xml
<CustomField>
    <fullName>Electoral_Circuit_name__c</fullName>
    <label>Circuit Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>