force-app/main/default/objects/Contact/fields/Electoral_District__c.field-meta.xml
<CustomField>
    <fullName>Electoral_District__c</fullName>
    <label>Distrito Electoral</label>
    <length>255</length>
    <type>Text</type>
</CustomField>