force-app/main/default/objects/Contact/fields/Electoral_District_name__c.field-meta.xml
<CustomField>
    <fullName>Electoral_District_name__c</fullName>
    <label>Constituency Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>