force-app/main/default/objects/Contact/fields/Electoral_Section__c.field-meta.xml
<CustomField>
    <fullName>Electoral_Section__c</fullName>
    <label>Sección Electoral</label>
    <length>100</length>
    <type>Text</type>
</CustomField>