force-app/main/default/objects/Contact/fields/Employer_1__c.field-meta.xml
<CustomField>
    <fullName>Employer_1__c</fullName>
    <label>Empleadores #1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>