force-app/main/default/objects/Contact/fields/Employer_3__c.field-meta.xml
<CustomField>
    <fullName>Employer_3__c</fullName>
    <label>Empleadores #3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>