force-app/main/default/objects/Contact/fields/eph_desocupada__c.field-meta.xml
<CustomField>
    <fullName>eph_desocupada__c</fullName>
    <label>EPH Desocupada</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>