force-app/main/default/objects/Contact/fields/eph_garrafa__c.field-meta.xml
<CustomField>
    <fullName>eph_garrafa__c</fullName>
    <label>EPH Garrafa</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>