force-app/main/default/objects/Contact/fields/eph_hacinamiento__c.field-meta.xml
<CustomField>
    <fullName>eph_hacinamiento__c</fullName>
    <label>EPH Hacinamiento</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>