force-app/main/default/objects/Contact/fields/eph_materiales__c.field-meta.xml
<CustomField>
    <fullName>eph_materiales__c</fullName>
    <label>EPH Materiales</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>