force-app/main/default/objects/Contact/fields/eph_nbi__c.field-meta.xml
<CustomField>
    <fullName>eph_nbi__c</fullName>
    <label>EPH Necesidades Básicas Insatisfechas</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>