force-app/main/default/objects/Contact/fields/eph_no_ocupada__c.field-meta.xml
<CustomField>
    <fullName>eph_no_ocupada__c</fullName>
    <label>EPH No Ocupada</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>