force-app/main/default/objects/Contact/fields/eph_por_departamento__c.field-meta.xml
<CustomField>
    <fullName>eph_por_departamento__c</fullName>
    <label>EPH Por Departamento</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>