force-app/main/default/objects/Contact/fields/eph_sin_cloaca__c.field-meta.xml
<CustomField>
    <fullName>eph_sin_cloaca__c</fullName>
    <label>EPH Sin Cloaca</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>