force-app/main/default/objects/Contact/fields/eph_tipo__c.field-meta.xml
<CustomField>
    <fullName>eph_tipo__c</fullName>
    <label>EPH Imputación</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Circuito</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>