force-app/main/default/objects/Contact/fields/eph_urp__c.field-meta.xml
<CustomField>
    <fullName>eph_urp__c</fullName>
    <label>EPH URP</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Urbano</fullName>
            </value>
            <value>
                <fullName>Rural</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>