force-app/main/default/objects/Contact/fields/foreign_category__c.field-meta.xml
<CustomField>
    <fullName>foreign_category__c</fullName>
    <label>Categoria Extranjero</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Permanente</fullName>
            </value>
            <value>
                <fullName>Temporaria</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>