force-app/main/default/objects/Contact/fields/grouphash_coe__c.field-meta.xml
<CustomField>
    <fullName>grouphash_coe__c</fullName>
    <label>Hash CoEdificio</label>
    <length>128</length>
    <type>Text</type>
</CustomField>