force-app/main/default/objects/Contact/fields/grouphash_cof__c.field-meta.xml
<CustomField>
    <fullName>grouphash_cof__c</fullName>
    <label>Hash Familiar</label>
    <length>128</length>
    <type>Text</type>
</CustomField>