force-app/main/default/objects/Contact/fields/grouphash_coh__c.field-meta.xml
<CustomField>
    <fullName>grouphash_coh__c</fullName>
    <label>Hash CoHabitante</label>
    <length>128</length>
    <type>Text</type>
</CustomField>