force-app/main/default/objects/Contact/fields/grouphash_cot__c.field-meta.xml
<CustomField>
    <fullName>grouphash_cot__c</fullName>
    <label>Hash CoTrabajador</label>
    <length>128</length>
    <type>Text</type>
</CustomField>