force-app/main/default/objects/Contact/fields/grouphash_cot_near__c.field-meta.xml
<CustomField>
    <fullName>grouphash_cot_near__c</fullName>
    <label>Hash CoTrabajador Cercano</label>
    <length>128</length>
    <type>Text</type>
</CustomField>