force-app/main/default/objects/Contact/fields/grouphash_cov__c.field-meta.xml
<CustomField>
    <fullName>grouphash_cov__c</fullName>
    <label>Hash CoViajero</label>
    <length>128</length>
    <type>Text</type>
</CustomField>