force-app/main/default/objects/Contact/fields/health_insurance__c.field-meta.xml
<CustomField>
    <fullName>health_insurance__c</fullName>
    <label>Obra Social</label>
    <type>TextArea</type>
</CustomField>