force-app/main/default/objects/Contact/fields/id_radio_censal__c.field-meta.xml
<CustomField>
    <fullName>id_radio_censal__c</fullName>
    <label>Identificador de Radio Censal</label>
    <length>9</length>
    <type>Text</type>
</CustomField>