force-app/main/default/objects/Contact/fields/ID_Wortise__c.field-meta.xml
<CustomField>
    <fullName>ID_Wortise__c</fullName>
    <label>ID Wortise</label>
    <length>64</length>
    <type>Text</type>
</CustomField>