force-app/main/default/objects/Contact/fields/Income_Total__c.field-meta.xml
<CustomField>
    <fullName>Income_Total__c</fullName>
    <label>Ingreso Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>