force-app/main/default/objects/Contact/fields/Ingreso__c.field-meta.xml
<CustomField>
    <fullName>Ingreso__c</fullName>
    <label>Ingreso</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Muy Alto</fullName>
            </value>
            <value>
                <fullName>Alto</fullName>
            </value>
            <value>
                <fullName>Medio</fullName>
            </value>
            <value>
                <fullName>Bajo</fullName>
            </value>
            <value>
                <fullName>Muy Bajo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>