force-app/main/default/objects/Contact/fields/Is_Argentina__c.field-meta.xml
<CustomField>
    <fullName>Is_Argentina__c</fullName>
    <formula>RecordType.DeveloperName = &apos;Argentino&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Argentina</label>
    <type>Checkbox</type>
</CustomField>