force-app/main/default/objects/Contact/fields/Is_RiverId_Citizen__c.field-meta.xml
<CustomField>
    <fullName>Is_RiverId_Citizen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_RiverId_Citizen</label>
    <type>Checkbox</type>
</CustomField>