force-app/main/default/objects/Contact/fields/jerarquia_empleo__c.field-meta.xml
<CustomField>
    <fullName>jerarquia_empleo__c</fullName>
    <label>Jerarquía Empleo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Directores y gerentes</fullName>
            </value>
            <value>
                <fullName>Profesionales cientificos e intelectuales</fullName>
            </value>
            <value>
                <fullName>Tecnicos y profesionales de nivel medio</fullName>
            </value>
            <value>
                <fullName>Personal de apoyo administrativo</fullName>
            </value>
            <value>
                <fullName>Trabajadores de servicio y vendedores</fullName>
            </value>
            <value>
                <fullName>Trabajadores agropecuarios</fullName>
            </value>
            <value>
                <fullName>Operadores y otros oficios</fullName>
            </value>
            <value>
                <fullName>Ocupaciones militares</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>