force-app/main/default/objects/Contact/fields/JSON_Votos__c.field-meta.xml
<CustomField>
    <fullName>JSON_Votos__c</fullName>
    <defaultValue>(&quot;{}&quot;)</defaultValue>
    <label>JSON_Votos</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>