force-app/main/default/objects/Contact/fields/Level0ID_18__c.field-meta.xml
<CustomField>
    <fullName>Level0ID_18__c</fullName>
    <formula>CASE(
 Territorio_Administrativo__r.Nivel_Administrativo__c,
 0,
 CASESAFEID(Territorio_Administrativo__c),
 1,
 CASESAFEID(Territorio_Administrativo__r.ParentId__c),
 2,
 CASESAFEID(Territorio_Administrativo__r.ParentId__r.ParentId__c),
 3,
 CASESAFEID(Territorio_Administrativo__r.ParentId__r.ParentId__r.ParentId__c),
 4,
 CASESAFEID(Territorio_Administrativo__r.ParentId__r.ParentId__r.ParentId__r.ParentId__c),
 null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level0ID_18</label>
    <type>Text</type>
</CustomField>