force-app/main/default/objects/Contact/fields/Level0ID__c.field-meta.xml
<CustomField>
    <fullName>Level0ID__c</fullName>
    <formula>CASE(
 Territorio_Administrativo__r.Nivel_Administrativo__c,
 0,
 Territorio_Administrativo__c,
 1,
 Territorio_Administrativo__r.ParentId__c,
 2,
 Territorio_Administrativo__r.ParentId__r.ParentId__c,
 3,
 Territorio_Administrativo__r.ParentId__r.ParentId__r.ParentId__c,
 4,
 Territorio_Administrativo__r.ParentId__r.ParentId__r.ParentId__r.ParentId__c,
 null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level0ID</label>
    <type>Text</type>
</CustomField>