force-app/main/default/objects/Contact/fields/Level1Name__c.field-meta.xml
<CustomField>
    <fullName>Level1Name__c</fullName>
    <formula>IF(Territorio_Administrativo__r.Nivel_Administrativo__c == 1, Territorio_Administrativo__r.Name,  (
	IF(Territorio_Administrativo__r.Nivel_Administrativo__c ==  2 ,Territorio_Administrativo__r.ParentId__r.Name,
		IF(Territorio_Administrativo__r.Nivel_Administrativo__c == 3, Territorio_Administrativo__r.ParentId__r.ParentId__r.Name,
			IF(Territorio_Administrativo__r.Nivel_Administrativo__c == 4, Territorio_Administrativo__r.ParentId__r.ParentId__r.ParentId__r.Name, NULL)		
		) 
	)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level1Name</label>
    <type>Text</type>
</CustomField>