force-app/main/default/objects/Contact/fields/Level2ID_18__c.field-meta.xml
<CustomField>
    <fullName>Level2ID_18__c</fullName>
    <formula>CASE(
Territorio_Administrativo__r.Nivel_Administrativo__c,
2,
CASESAFEID(Territorio_Administrativo__c),
3,
CASESAFEID(Territorio_Administrativo__r.ParentId__c),
4,
CASESAFEID(Territorio_Administrativo__r.ParentId__r.ParentId__c),
null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level2ID_18</label>
    <type>Text</type>
</CustomField>