force-app/main/default/objects/Contact/fields/Level2ID__c.field-meta.xml
<CustomField>
    <fullName>Level2ID__c</fullName>
    <formula>IF(Territorio_Administrativo__r.Nivel_Administrativo__c == 2, Territorio_Administrativo__c, 
(IF(Territorio_Administrativo__r.Nivel_Administrativo__c == 3,Territorio_Administrativo__r.ParentId__c,Territorio_Administrativo__r.ParentId__r.ParentId__c) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level2ID</label>
    <type>Text</type>
</CustomField>