force-app/main/default/objects/Contact/fields/Level3Name__c.field-meta.xml
<CustomField>
    <fullName>Level3Name__c</fullName>
    <formula>IF(Territorio_Administrativo__r.Nivel_Administrativo__c == 3, Territorio_Administrativo__r.Name,  (
	IF(Territorio_Administrativo__r.Nivel_Administrativo__c ==  4 ,Territorio_Administrativo__r.ParentId__r.Name, NULL
		
	)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level3Name</label>
    <type>Text</type>
</CustomField>