force-app/main/default/objects/Contact/fields/Linkedin_Link__c.field-meta.xml
<CustomField>
    <fullName>Linkedin_Link__c</fullName>
    <label>Linkedin Link</label>
    <type>Url</type>
</CustomField>