force-app/main/default/objects/Contact/fields/Location_UUID__c.field-meta.xml
<CustomField>
    <fullName>Location_UUID__c</fullName>
    <description>Codigo Unico de Territorio de Metapod</description>
    <label>Location UUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>