force-app/main/default/objects/Contact/fields/MailingNumber__c.field-meta.xml
<CustomField>
    <fullName>MailingNumber__c</fullName>
    <description>Este es el numero de Calle que vá</description>
    <label>MailingNumber</label>
    <length>20</length>
    <type>Text</type>
</CustomField>