force-app/main/default/objects/Contact/fields/match_js__c.field-meta.xml
<CustomField>
    <fullName>match_js__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Para joaquín</description>
    <label>Match JS</label>
    <type>Checkbox</type>
</CustomField>