force-app/main/default/objects/Contact/fields/MCConnect__c.field-meta.xml
<CustomField>
    <fullName>MCConnect__c</fullName>
    <defaultValue>false</defaultValue>
    <description>marca el registro para conector de marketing cloud.</description>
    <label>MCConnect</label>
    <type>Checkbox</type>
</CustomField>