force-app/main/default/objects/Contact/fields/mcuid__c.field-meta.xml
<CustomField>
    <fullName>mcuid__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>mcuid</label>
    <length>5</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>