force-app/main/default/objects/Contact/fields/membership_sports_club__c.field-meta.xml
<CustomField>
    <fullName>membership_sports_club__c</fullName>
    <label>Membership Sports Club</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Argentinos Juniors</fullName>
            </value>
            <value>
                <fullName>Boca Juniors</fullName>
            </value>
            <value>
                <fullName>Huracán</fullName>
            </value>
            <value>
                <fullName>River Plate</fullName>
            </value>
            <value>
                <fullName>Rosario Central</fullName>
            </value>
            <value>
                <fullName>Talleres</fullName>
            </value>
            <value>
                <fullName>Tigre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>