force-app/main/default/objects/Contact/fields/mesa15__c.field-meta.xml
<CustomField>
    <fullName>mesa15__c</fullName>
    <label>Key Mesa 15</label>
    <length>64</length>
    <type>Text</type>
</CustomField>