force-app/main/default/objects/Contact/fields/mesa17__c.field-meta.xml
<CustomField>
    <fullName>mesa17__c</fullName>
    <label>Key Mesa 17</label>
    <length>64</length>
    <type>Text</type>
</CustomField>