force-app/main/default/objects/Contact/fields/mesa19__c.field-meta.xml
<CustomField>
    <fullName>mesa19__c</fullName>
    <label>Key Mesa 19</label>
    <length>64</length>
    <type>Text</type>
</CustomField>