force-app/main/default/objects/Contact/fields/mig_entry_date__c.field-meta.xml
<CustomField>
    <fullName>mig_entry_date__c</fullName>
    <label>Viajero Fecha Ingreso</label>
    <type>Date</type>
</CustomField>