force-app/main/default/objects/Contact/fields/mig_exit_date__c.field-meta.xml
<CustomField>
    <fullName>mig_exit_date__c</fullName>
    <label>Viajero Fecha Egreso</label>
    <type>Date</type>
</CustomField>