force-app/main/default/objects/Contact/fields/mig_inbound_country__c.field-meta.xml
<CustomField>
    <fullName>mig_inbound_country__c</fullName>
    <label>Viajero País Ingreso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>