force-app/main/default/objects/Contact/fields/mig_inbound_crossing_point__c.field-meta.xml
<CustomField>
    <fullName>mig_inbound_crossing_point__c</fullName>
    <label>Viajero Paso Fronterizo Ingreso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>