force-app/main/default/objects/Contact/fields/mig_inbound_crossing_terrestrial_type__c.field-meta.xml
<CustomField>
    <fullName>mig_inbound_crossing_terrestrial_type__c</fullName>
    <label>Viajero Terrestre Tipo Ingreso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>