force-app/main/default/objects/Contact/fields/mig_inbound_transportation_desc__c.field-meta.xml
<CustomField>
    <fullName>mig_inbound_transportation_desc__c</fullName>
    <label>Descripción Transporte Ingreso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>