force-app/main/default/objects/Contact/fields/mig_inbound_transportation_id__c.field-meta.xml
<CustomField>
    <fullName>mig_inbound_transportation_id__c</fullName>
    <label>Id. Transporte Ingreso</label>
    <length>128</length>
    <type>Text</type>
</CustomField>