force-app/main/default/objects/Contact/fields/mig_outbound_country__c.field-meta.xml
<CustomField>
    <fullName>mig_outbound_country__c</fullName>
    <label>Viajero Pais Egreso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>