force-app/main/default/objects/Contact/fields/mig_outbound_crossing_type__c.field-meta.xml
<CustomField>
    <fullName>mig_outbound_crossing_type__c</fullName>
    <label>Viajero Medio Egreso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>