force-app/main/default/objects/Contact/fields/mig_outbound_transportation_desc__c.field-meta.xml
<CustomField>
    <fullName>mig_outbound_transportation_desc__c</fullName>
    <label>Descripción Transporte Egreso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>