force-app/main/default/objects/Contact/fields/mig_outbound_transportation_id__c.field-meta.xml
<CustomField>
    <fullName>mig_outbound_transportation_id__c</fullName>
    <label>Id. Transporte Egreso</label>
    <length>128</length>
    <type>Text</type>
</CustomField>