force-app/main/default/objects/Contact/fields/mig_status__c.field-meta.xml
<CustomField>
    <fullName>mig_status__c</fullName>
    <label>Viajero Estado Migratorio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>arrived</fullName>
            </value>
            <value>
                <fullName>stranded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>