force-app/main/default/objects/Contact/fields/monotax_category__c.field-meta.xml
<CustomField>
    <fullName>monotax_category__c</fullName>
    <label>Categoría de monotributo</label>
    <type>TextArea</type>
</CustomField>