force-app/main/default/objects/Contact/fields/movilidad_clase__c.field-meta.xml
<CustomField>
    <fullName>movilidad_clase__c</fullName>
    <label>Clase Vehiculo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>