force-app/main/default/objects/Contact/fields/movilidad_desc__c.field-meta.xml
<CustomField>
    <fullName>movilidad_desc__c</fullName>
    <label>Descripcion Vehiculo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>