force-app/main/default/objects/Contact/fields/movilidad_patente__c.field-meta.xml
<CustomField>
    <fullName>movilidad_patente__c</fullName>
    <label>Patente Vehículo</label>
    <type>TextArea</type>
</CustomField>