force-app/main/default/objects/Contact/fields/Nacionalidad__c.field-meta.xml
<CustomField>
    <fullName>Nacionalidad__c</fullName>
    <label>Nacionalidad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>