force-app/main/default/objects/Contact/fields/Numero_Abonado_Movil__c.field-meta.xml
<CustomField>
    <fullName>Numero_Abonado_Movil__c</fullName>
    <label>Numero Abonado Móvil</label>
    <length>255</length>
    <type>Text</type>
</CustomField>