force-app/main/default/objects/Contact/fields/PhotoUrl_legacy__c.field-meta.xml
<CustomField>
    <fullName>PhotoUrl_legacy__c</fullName>
    <label>PhotoURL</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>